# models/user.js
@@ -4,9 +4,15 @@ const { Schema, model } = require('mongoose');
 const { hendleMongooseError } = require('../helpers');
 
 const emailRegexp = /^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$/;
+
 const passwordRegexp = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).+$/;
-const dateRegexp = /^\d{2}-\d{2}-\d{4}$/;
-console.log('dateRegexp:', dateRegexp);
+
+const dateRegExp =
+  /^(?:(?:31(\/|-|\.)(?:0?[13578]|1[02]))\1|(?:(?:29|30)(\/|-|\.)(?:0?[13-9]|1[0-2])\2))(?:(?:1[6-9]|[2-9]\d)?\d{2})$|^(?:29(\/|-|\.)0?2\3(?:(?:(?:1[6-9]|[2-9]\d)?(?:0[48]|[2468][048]|[13579][26])|(?:(?:16|[2468][048]|[3579][26])00))))$|^(?:0?[1-9]|1\d|2[0-8])(\/|-|\.)(?:(?:0?[1-9])|(?:1[0-2]))\4(?:(?:1[6-9]|[2-9]\d)?\d{2})$/;
+
+const phoneRegExp = /^(\+380\d{9})$/;
+
+const cityRegExp = /^[A-Z][A-Za-z\s]*$/;
 
 const userSchema = new Schema(
   {
@@ -31,10 +37,25 @@ const userSchema = new Schema(
       type: String,
       default: '',
     },
-    // avatarURL: {
-    //   type: String,
-    //   required: true,
-    // },
+    avatarURL: {
+      type: String,
+      required: true,
+    },
+    birthday: {
+      type: String,
+      match: dateRegExp,
+      default: null,
+    },
+    phone: {
+      type: String,
+      match: phoneRegExp,
+      default: null,
+    },
+    city: {
+      type: String,
+      match: cityRegExp,
+      default: null,
+    },
   },
   { versionKey: false, timestamps: true }
 );
@@ -83,8 +104,10 @@ const loginSchema = Joi.object({
 
 const ubdateProfileSchema = Joi.object({
   name: Joi.string(),
-  email: Joi.string().pattern(emailRegexp),
-  birthday: Joi.string(),
+  email: Joi.string().pattern(emailRegexp).required(),
+  birthday: Joi.string().pattern(dateRegExp).required(),
+  phone: Joi.string().pattern(phoneRegExp),
+  city: Joi.string().pattern(cityRegExp),
 });
 
 const schemas = {
